--- a/mural-precos-piaui-api/package.json
+++ b/mural-precos-piaui-api/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"no tests\" && exit 0"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -19,7 +20,7 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "eslint": "^8.47.0"
+    "eslint": "^8.47.0",
+    "nodemon": "^2.0.22"
   }
 }
